--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -16,12 +16,12 @@ on:
 env:
   TF_CLOUD_ORGANIZATION: "FiapSOAT2-gp14"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-  TF_WORKSPACE: "soat23-gp14-hackaton-infra-as-code" //FIXME: verificar se precisa atualizar
+  TF_WORKSPACE: "soat23-gp14-hackaton-infra-as-code"
   CONFIG_DIRECTORY: "./"
 
 jobs:
   terraform:
-    if: github.repository != 'hashicorp-education/soat23-gp14-infra-as-code'
+    if: github.repository != 'hashicorp-education/hackaton-infra-as-code'
     name: "Terraform Plan"
     runs-on: ubuntu-latest
     permissions:
